Router , assets Images

--- a/client/src/components/rightbar/Rightbar.css
+++ b/client/src/components/rightbar/Rightbar.css
@@ -75,6 +75,8 @@
 }
 
 .rightbarFollowingImg{
+    display: flex;
+    flex-direction: column;
     width: 100px;
     height: 100px;
     object-fit: cover;
