--- a/client/src/components/rightbar/Rightbar.css
+++ b/client/src/components/rightbar/Rightbar.css
@@ -82,3 +82,21 @@
     object-fit: cover;
     border-radius: 5px;
 }
+
+.rightbarFollowButton{
+    margin-top: 30px;
+    margin-bottom: 10px;
+    border: none;
+    background-color: slateblue;
+    color: white;
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+    font-size: 16px;
+    font-weight: 500;
+    cursor: pointer;
+}
+
+.rightbarFollowButton:focus{
+    outline: none;
+}
